# video-processor

./: .env.aws.example  .env.example  .env.local.example  .gitignore  Dockerfile  Dockerfile.cpu  LICENSE  Makefile  README.md  docker-compose-aws.yaml  docker-compose-local.yaml  docker-compose.yaml  docker-entrypoint.sh  healthcheck.sh  pyproject.toml  requirements.txt
autoscaler/: Dockerfile  autoscale.py
conf/: nginx.conf
processor/: admin.py  apps.py  models.py  signals.py  tasks.py  tracking.py  urls.py  views.py
processor/management/commands/: bulk_add_videos.py  cleanup_empty_videos.py  cleanup_frames.py  process_video.py  reprocess_videos.py
processor/migrations/: 0001_initial.py  0002_frame_frame_path_detection.py  0003_rename_y_cood_detection_y_coord.py  0004_video_path.py  0005_remove_frame_frame_path_frame_frame_data.py  0006_alter_frame_status.py  0007_remove_frame_frame_data_remove_video_path_and_more.py  0008_alter_frame_frame_file.py  0009_alter_frame_frame_file_alter_video_frame_count_and_more.py  0010_remove_frame_video_videochunk_frame_video_chunk.py  0011_alter_frame_video_chunk_delete_videochunk.py  0012_rename_video_chunk_frame_video.py  0013_remove_frame_video_videochunk_frame_video_chunk.py  0014_videochunk_status.py  0015_videochunk_sequence_number.py  0016_video_frame_rate.py  0017_frame_detections_file.py  0018_video_detections_file.py  0019_alter_frame_detections_file_alter_frame_frame_file_and_more.py  0020_videochunk_end_frame_videochunk_start_frame_and_more.py  0021_add_frame_count_to_videochunk.py  0022_track_detection_track.py  0023_add_tags.py  0024_add_deleted_status.py
processor/templates/admin/: video_change_form.html
processor/templates/processor/: base.html  video_detail.html  (+1 more)
video_processor/: celery.py  settings.py  urls.py
